--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -5,7 +5,8 @@
       "__fold__.experimentalLazyAssets",
       "rich-text#shelf-title",
       "flex-layout.row#shelf",
-      "flex-layout.row#newsletter-form"
+      "rich-text#newsletterLabel",
+      "flex-layout.row#newsletter"
     ]
   },
 
@@ -109,7 +110,13 @@
     }
   },
 
-  "flex-layout.row#newsletter-form": {
+  "rich-text#newsletterLabel": {
+    "props": {
+      "text": "**Participe de nossas news com promoções e novidades!**",
+      "blockClass": "question"
+    }
+  },
+  "flex-layout.row#newsletter": {
     "children": ["newsletter-form"],
     "props": {
       "blockClass": "newsletterForm"
@@ -117,45 +124,24 @@
   },
   "newsletter-form": {
     "children": [
-      "rich-text#newsletterLabel",
-      "newsletter-input-name",
-      "newsletter-input-email",
-      "newsletter-submit"
+        "newsletter-input-name",
+        "newsletter-input-email",
+        "newsletter-submit"
     ]
   },
-  "rich-text#newsletterLabel": {
-    "props": {
-      "text": "**Participe de nossas news com promoções e novidades!**",
-      "blockClass": "question"
-    }
-  },
   "newsletter-input-name": {
-    "props": {
-      "placeholderText": "Digite seu nome"
-    }
+      "props": {
+        "placeholderText": "Digite seu nome"
+      }
   },
   "newsletter-input-email": {
-    "props": {
-      "placeholderText": "Digite seu email"
-    }
+      "props": {
+        "placeholderText": "Digite seu email"
+      }
   },
   "newsletter-submit": {
-    "props": {
-      "submitButtonLabel": "Eu quero!"
-    }
-  },
-
-  "rich-text#question": {
-    "props": {
-      "text": "**This is an example store built using the VTEX platform.\nWant to know more?**",
-      "blockClass": "question"
-    }
-  },
-
-  "rich-text#link": {
-    "props": {
-      "text": "\n**Reach us at**\nwww.vtex.com.br",
-      "blockClass": "link"
-    }
+      "props": {
+        "submitButtonLabel": "Eu quero!"
+      }
   }
 }
