--- a/store/blocks/header/header.jsonc
+++ b/store/blocks/header/header.jsonc
@@ -85,7 +85,7 @@
     "props": {
       "title": "Logo",
       "href": "/",
-      "url": "https://storecomponents.vteximg.com.br/arquivos/store-theme-logo-mobile.png",
+      "url": "https://babadotop.vteximg.com.br/arquivos/logo-corebiz.svg",
       "width": "70"
     }
   }
