--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "store": "0.x",
     "sitemap": "0.x",
     "docs": "0.x",
-    "assets": "0.x"
+    "assets": "0.x",
+    "react": "3.x"
   },
   "mustUpdateAt": "2018-09-05",
   "scripts": {
@@ -64,7 +65,8 @@
     "vtex.tab-layout": "0.x",
     "vtex.condition-layout": "2.x",
     "vtex.css-handles": "1.x",
-    "vtex.store-newsletter": "1.x"
+    "vtex.store-newsletter": "1.x",
+    "vtex.product-context": "0.x"
   },
   "peerDependencies": {
     "vtex.reviews-and-ratings": "2.x"
