--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -235,6 +235,7 @@
   },
   "newsletter-submit": {
       "props": {
+        "blockClass": ["desktop", "mobile"],
         "submitButtonLabel": "Eu quero!"
       }
   }
